# Real-Time-Anomaly-Detection-on-Time-Series-Streams

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  run.py
src/: __init__.py
src/detector/: __init__.py  anomaly.py  drift.py  metrics.py
src/pipeline/: runner.py
src/server/: __init__.py  app.py
src/server/static/: dashboard.js  index.html
src/stream/: __init__.py  generator.py  models.py
tests/: __init__.py  conftest.py  test_dashboard.py  test_detector.py  test_pipeline.py  test_stream.py
